reviews/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
#  annotations:
#    ingress.kubernetes.io/app-root: /api/ratings
spec:
  rules:
    - host: ratings.movies.com
      http:
        paths:
          - path: /api/ratings
            pathType: Prefix
            backend:
              service:
                name: ratings
                port:
                  number: 8082
